feat: add export attachments function
